--- a/app_flask/templates/index.html
+++ b/app_flask/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}首页-{{current_user.username}}{% endblock%}
+{% block title %}首页{{- current_user.username}}{% endblock%}
 {% block css %}/static/styles/pages/index.css{% endblock%}
 {% block content %}
 <div class="page-main clearfix">
@@ -55,4 +55,17 @@
     </article>
     {% endfor %}
 </div>
+{% endblock%}
+
+{% block js %}
+<script type="text/javascript">
+ {% if current_user.is_authenticated %}
+
+ {% else %}
+
+ {% endif %}
+ window.uid = {{user.id}};
+</script>
+<script type="text/javascript" src="/static/js/jquery.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
 {% endblock%}
