--- a/app_flask/static/styles/common/header.css
+++ b/app_flask/static/styles/common/header.css
@@ -26,6 +26,11 @@
     float: right;
     margin-top: 20px;
 }
+
+.web-menu1 {
+    float: right;
+    margin-top: 20px;
+}
 .profile-ico {
     background-image: url(../../images/img/icons.png);
     background-repeat: no-repeat;
